# financial-research-analyst

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  pyproject.toml
.claude/skills/create-specs/: SKILL.md
.claude/specs/: 04-structured-extraction.md  05-manual-parse-extraction.md  06-composition-lcel.md
scripts/: demo_router.py  smoke_extract.py
src/analyst/: config.py  models.py
src/analyst/chains/: classify.py  extractors.py  router.py
src/analyst/extraction/: _provenance.py  manual_parse.py  structured.py
src/analyst/ingestion/: chunking.py  loaders.py
src/analyst/prompts/: classify_prompts.py  extraction_prompts.py  manual_extraction_prompts.py
src/analyst/schemas/: classification.py  financials.py  provenance.py  risk.py  sentiment.py
tests/: test_ingestion.py
tests/chains/: test_classify.py  test_fallbacks.py  test_router.py
tests/classification/: test_classify_document.py
tests/extraction/: test_chain_extractors.py  test_structured.py
